--- a/src/content/help.html
+++ b/src/content/help.html
@@ -773,10 +773,11 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
       </dd>
       <dd>See also:</dd>
       <dd><a href="https://www.chromium.org/administrators/configuring-policy-for-extensions" target="_blank">Configuring Apps and Extensions by Policy</a></dd>
+      <dd><a href="https://chromium.googlesource.com/chromium/src/+/HEAD/docs/enterprise/policies.md" target="_blank">Enterprise policies</a></dd>
 
       <dt>Firefox</dt>
       <dd>Policies can be viewed on <code>about:policies</code></dd>
-      <dd>"Set the ID the extension e.g. "foxyproxy@eric.h.jung" or "foxyproxy-basic@eric.h.jung"</dd>
+      <dd>Set the ID the extension e.g. "foxyproxy@eric.h.jung" or "foxyproxy-basic@eric.h.jung"</dd>
       <dd>
 <pre>
 {
