--- a/src/content/about.html
+++ b/src/content/about.html
@@ -18,8 +18,8 @@
     <dl>
 
       <dt>8.2</dt>
-      <dd>Added blank option to set the country to blank</dd>
-      <dd>Added managed storage feature (#42)</dd>
+      <dd>Added enterprise policy & managed storage feature (#42)</dd>
+      <dd>Added option to set the country to blank</dd>
       <dd></dd>
 
 
