--- a/src/content/help.html
+++ b/src/content/help.html
@@ -15,6 +15,7 @@
     <!-- <a href="#import">Import</a> -->
     <!-- <a href="#pattern-tester">Pattern Tester</a> -->
     <!-- <a href="#log">Log</a> -->
+    <a href="#enterprise-policy">Enterprise Policy</a>
     <!-- <a href="#managed-storage">Managed Storage</a> -->
     <a href="#support">Support</a>
   </nav>
@@ -765,18 +766,18 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
         </tr>
 
         <tr>
-          <th>FoxyProxy</th>
+          <th>FoxyProxy ID</th>
           <td>gcknhkkoolaabfmlnjonogaaifnjlfnp</td>
           <td>foxyproxy@eric.h.jung</td>
         </tr>
         <tr>
-          <th>FoxyProxy Basic</th>
+          <th>FoxyProxy Basic ID</th>
           <td>dookpfaalaaappcdneeahomimbllocnb</td>
           <td>foxyproxy-basic@eric.h.jung</td>
         </tr>
 
         <tr>
-          <th>FoxyProxy beta</th>
+          <th>FoxyProxy beta ID</th>
           <td>Copy the ID from chrome://extensions</td>
           <td>foxyproxy@eric.h.jung</td>
         </tr>
