--- a/src/content/help.html
+++ b/src/content/help.html
@@ -726,14 +726,12 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
     <h1 id="enterprise-policy" class="experimental">Enterprise Policy</h1>
     <p>Policies can also be configured for extensions that support policy management via the managed storage API.</p>
 
-    <dl>
-      <dd>FoxyProxy checks for managed storage at start-up, and MV3 background re-load</dd>
-      <dd>Managed storage data will be used if found</dd>
-      <dd>Managed storage data can set all, or some of the options (the rest will be set to their default values)</dd>
-      <dd>Toolbar popup works and users can switch between the options made available in managed storage</dd>
-      <dd>Some Toolbar popup buttons are disabled</dd>
-      <dd>Options page works normally but any changes will NOT be SAVED</dd>
-    </dl>
+    <ul>
+      <li>FoxyProxy checks for managed storage at start-up, and MV3 background re-load</li>
+      <li>Managed storage data will be used if found</li>
+      <li>Managed storage data can set all, or some of the options (the rest will be set to their default values)</li>
+      <li>Toolbar popup & Options page work normally but any changes will NOT be SAVED</li>
+    </ul>
 
     <h4>Default Options <span>(v8.2)</span></h4>
 <pre>
