--- a/src/content/about.html
+++ b/src/content/about.html
@@ -18,7 +18,7 @@
     <dl>
 
       <dt>8.2</dt>
-      <dd>Added enterprise policy & managed storage feature (#42)</dd>
+      <dd>Added enterprise policy & managed storage feature (#42) (experimental)</dd>
       <dd>Added option to set the country to blank</dd>
       <dd></dd>
 
