--- a/src/content/help.html
+++ b/src/content/help.html
@@ -733,6 +733,7 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
           <li>Managed data will be used</li>
           <li>Toolbar popup & Options page work normally but changes will NOT be SAVED</li>
           <li>Managed data can set all, or some of the options (the rest will be set to their default values)</li>
+          <li>Managed data format is the same as FoxyProxy export format</li>
         </ul>
       </li>
     </ul>
@@ -742,7 +743,7 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
 {
 
   "mode": "disable",        // mandatory: current option
-  "sync": false,            // optional:  not neceeecasry as it will be disabled on managed storage
+  "sync": false,            // optional:  not necessary as it will be disabled on managed storage
   "proxyDNS": true,         // optional:  Firefox Only and for SOCKS
   "passthrough": "",        // optional:  Global Exclude
   "container": {},          // optional:  Incognito/Container settings
