--- a/src/content/help.html
+++ b/src/content/help.html
@@ -264,19 +264,19 @@
     <table>
       <thead>
         <tr>
-          <td></td>
-          <td colspan="2">Chrome</td>
-          <td colspan="2">Firefox</td>
-        </tr>
-        <tr>
-          <th style="width: 12em;"></th>
-          <th>localhost</th>
-          <th>passthrough</th>
-          <th>localhost</th>
-          <th>passthrough</th>
+          <th></th>
+          <th colspan="2">Chrome</th>
+          <th colspan="2">Firefox</th>
         </tr>
       </thead>
       <tbody>
+        <tr>
+          <th></th>
+          <th>localhost</th>
+          <th>passthrough</th>
+          <th>localhost</th>
+          <th>passthrough</th>
+        </tr>
         <tr>
           <th>Proxy by Patterns</th>
           <td>browser</td>
@@ -821,22 +821,22 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
         <tr>
           <th>Location: Linux</th>
           <td>
-            • Chrome: /etc/opt/chrome/policies/ <br>
-            • Chromium: /etc/chromium/policies</td>
+            ◦ Chrome: <code>/etc/opt/chrome/policies/</code> <br>
+            ◦ Chromium: <code>/etc/chromium/policies</code></td>
           <td>
-            • System-wide: /etc/firefox/policies<br>
-            • Specific Firefox: firefox/distribution</td>
+            ◦ System-wide: <code>/etc/firefox/policies</code><br>
+            ◦ Specific Firefox: <code>firefox/distribution</code></td>
         </tr>
 
         <tr>
           <th>See also</th>
           <td>
-            • <a href="https://www.chromium.org/administrators/configuring-policy-for-extensions" target="_blank">Configuring Apps and Extensions by Policy</a><br>
-            • <a href="https://chromium.googlesource.com/chromium/src/+/HEAD/docs/enterprise/policies.md" target="_blank">Enterprise policies</a>
+            ◦ <a href="https://www.chromium.org/administrators/configuring-policy-for-extensions" target="_blank">Configuring Apps and Extensions by Policy</a><br>
+            ◦ <a href="https://chromium.googlesource.com/chromium/src/+/HEAD/docs/enterprise/policies.md" target="_blank">Enterprise policies</a>
           </td>
           <td>
-            • <a href="https://extensionworkshop.com/documentation/enterprise/adding-policy-support-to-your-extension/" target="_blank">How to add policy support</a><br>
-            • <a href="https://mozilla.github.io/policy-templates/" target="_blank">policy-templates</a>
+            ◦ <a href="https://extensionworkshop.com/documentation/enterprise/adding-policy-support-to-your-extension/" target="_blank">How to add policy support</a><br>
+            ◦ <a href="https://mozilla.github.io/policy-templates/" target="_blank">policy-templates</a>
           </td>
         </tr>
 
