--- a/src/content/about.html
+++ b/src/content/about.html
@@ -20,7 +20,7 @@
       <dt>8.2</dt>
       <dd>Added enterprise policy & managed storage feature (#42) (experimental)</dd>
       <dd>Added option to set the country to blank</dd>
-      <dd></dd>
+      <dd>Fixed an issue with sync (#45)</dd>
 
 
       <dt>8.1</dt>
