--- a/src/content/about.html
+++ b/src/content/about.html
@@ -21,6 +21,7 @@
       <dd>Added enterprise policy & managed storage feature (#42) (experimental)</dd>
       <dd>Added option to set the country to blank</dd>
       <dd>Fixed an issue with sync (#45)</dd>
+      <dd>Updated Incognito process on Chrome</dd>
 
 
       <dt>8.1</dt>
