cherry pick changes from https://github.com/foxyproxy/browser-extension/commit/f65ca14f3895b0ccc598e5d3b23dd985e8d90672 and https://github.com/foxyproxy/browser-extension/commit/544d1e1b224cfbf930e192f588a3fc1d573c1fed into an 8.1 branch

--- a/src/content/about.html
+++ b/src/content/about.html
@@ -16,6 +16,11 @@
 
     <h1 id="changelog">Changelog</h1>
     <dl>
+      <dt>8.2</dt>
+      <dd>Fixed an issue with sync (#45)</dd>
+      <dd>Updated Incognito process on Chrome</dd>
+
+    <dl>
       <dt>8.1</dt>
       <dd>Added Drag and Drop sorting of proxies (#29)</dd>
       <dd>Added duplicate proxy feature</dd>
