--- a/src/content/about.html
+++ b/src/content/about.html
@@ -20,6 +20,7 @@
       <dt>8.2</dt>
       <dd>Added enterprise policy & managed storage feature (#42) (experimental)</dd>
       <dd>Added option to set the country to blank</dd>
+      <dd>Disabled separate Incognito feature on Chrome temporarily</dd>
       <dd>Fixed an issue with sync (#45)</dd>
       <dd>Updated Incognito process on Chrome</dd>
 
