cherry picking from main into 8.1 for specific bug fixes

--- a/src/content/about.html
+++ b/src/content/about.html
@@ -14,11 +14,12 @@
 
   <article class="about">
 
-    <h1 id="changelog">Changelog</h1>
+    <h1 id="changelog">Changelog</h1> 
     <dl>
       <dt>8.2</dt>
       <dd>Fixed an issue with sync (#45)</dd>
       <dd>Updated Incognito process on Chrome</dd>
+      <dd>Added option to set the country to blank/empty</dd>
 
     <dl>
       <dt>8.1</dt>
